# AUV-Sim

./: .gitignore  README.md
a/: junk.py
log/: latest_build
src/auv_app/: package.xml  setup.cfg  setup.py
src/auv_app/auv_app/: imu_corrector.py  imu_publisher.py  my_node.py  pose_estimator.py  sim_pose_publisher.py  utils.py
src/auv_bringup/: CMakeLists.txt
src/auv_bringup/config/: bridge.yaml  default.rviz  ros_gz_example_bridge.yaml
src/auv_bringup/launch/: auv.launch.py
src/auv_description/: CMakeLists.txt
src/auv_description/model/: auv.urdf  auv.xacro  auv.xml  inertial_macros.xacro
src/auv_gazebo/: CMakeLists.txt  package.xml
src/auv_gazebo/src/: HelloWorld.cc
src/auv_gazebo/worlds/: world.sdf
src/bluerov2_ignition/worlds/: bluerov2_heavy_underwater.world
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: RangeBearing.msg  X150Status.msg
src/robot_app/: package.xml  setup.py
src/robot_app/robot_app/: X150_status_pub.py  imu.py  imu_tuner.py  odom.py  pose_estimator.py  range_bearing_pub.py  swim.py  test.py  true_pose.py  utils.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: bluerov2_heavy_bridge.yaml  rov_bridge.yaml  rover.rviz  rover_bridge.yaml  rover_ekf.yaml  sam_bot.rviz  (+2 more)
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/hooks/: robot_description.sh.in
src/robot_description/model/: dummy.sdf  rover.xacro  sam_bot.xacro  tmp.sdf  tmp.urdf
src/robot_description/models/: rover.xacro  scuba.sdf  tmp.urdf
src/robot_description/models/bluerov2_heavy/: model.sdf
src/robot_description/models/rov/: model.config  model.sdf
src/robot_description/utils/: basic_links.xacro
src/robot_gazebo/: CMakeLists.txt  package.xml
src/robot_gazebo/hooks/: robot_gazebo.sh.in
src/robot_gazebo/src/: CMakeLists.txt
src/robot_gazebo/src/HelloWorld/: CMakeLists.txt  HelloWorld.cc
src/robot_gazebo/src/X150/: CMakeLists.txt  X150.cc  X150.hh
src/robot_gazebo/src/X150_system/: CMakeLists.txt  X150System.cc  X150System.hh
src/robot_gazebo/src/custom_sensor/: Odometer.cc  Odometer.hh
src/robot_gazebo/src/custom_sensor_system/: CMakeLists.txt  OdometerSystem.cc
src/robot_gazebo/worlds/: X150.sdf  bluerov2_heavy_underwater.sdf  odometer.sdf  odometer_X150.sdf  rover_world.sdf  template_world.sdf
(+86 files in other folders)
